# it2810_scripts

./: .gitignore  groups.example.csv  make_gitlab_groups.py  pyproject.toml
